--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-NVD_API_KEY=
+NVD_API_KEY= # https://nvd.nist.gov/developers/request-an-api-key
 CVE_LAST_MODIFIED_EARLIEST=2019-01-01T00:00:00
 CVE_LAST_MODIFIED_LATEST=2019-12-31T23:59:59
 RESULTS_PER_PAGE=500
