--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-NVD_API_KEY= # https://nvd.nist.gov/developers/request-an-api-key
-CVE_LAST_MODIFIED_EARLIEST=2019-01-01T00:00:00
-CVE_LAST_MODIFIED_LATEST=2019-12-31T23:59:59
-RESULTS_PER_PAGE=500
-REDIS_HOST=localhost
-REDIS_PORT=6379
+NVD_API_KEY=
+CVE_LAST_MODIFIED_EARLIEST=
+CVE_LAST_MODIFIED_LATEST=
+RESULTS_PER_PAGE=
+REDIS_HOST=
+REDIS_PORT=
