--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ urllib3==2.2.2
 python-dotenv
 eventlet
 celery==5.3.4
+ijson==3.3.0
 redis
 flower
 https://github.com/muchdogesec/stix2extensions/releases/download/main-2024-11-29-08-23-28/stix2extensions-0.0.2b1-py3-none-any.whl
