--- a/.github/workflows/daily-r2.yml
+++ b/.github/workflows/daily-r2.yml
@@ -49,7 +49,7 @@ jobs:
                 # install requirements
 
                 pip install -r requirements.txt
-                pip install boto3
+                pip install boto3==1.35.99
 
             - name: Run and upload
               env:
