--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,4 +1,4 @@
-name: Run Unittests and Upload Coverage
+name: Run Tests
 
 permissions:
   contents: read
@@ -8,9 +8,12 @@ on:
     branches:
       - main
   pull_request:
+    types:
+      - opened
+      - synchronize
 
 jobs:
-  unittest:
+  test-pipeline:
     runs-on: ubuntu-latest
     environment: test_pipeline
     
@@ -24,22 +27,26 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      
-      - name: run unit tests with pytest+coverage
-        id: test-endpoints
-        run: |
+
+      - name: Setup environment
+        id: setup_environment
           pip install -r requirements.txt pytest pytest-cov
           export PYTHONPATH=.
 
+      - name: Unit tests
+        id: unit_tests
+        run: |
           pytest --cov --cov-branch --cov-report=xml --junitxml=junit.xml -o junit_family=legacy tests/
 
       - name: Upload coverage reports to Codecov
+        id: upload_unit_test_coverage
         if: ${{ !cancelled() }}
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Upload test results to Codecov
+        id: upload_unit_test_results
         if: ${{ !cancelled() }}
         uses: codecov/test-results-action@v1
         with:
